# flame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  flame.cpp  flame.py
cpp/: ColorScheme.cpp  Fitter.h  Random.cpp  Renderer.cpp  Renderer.h  StrangeAttractor.cpp  argparser.h  colorscheme.cpp  colorscheme.h  colorscheme.script  dim.h  fastmath.cpp  fastmath.h  fitter.cpp  fitter.h  flame.cpp  pixel.cpp  pixel.h  point.h  random.bytes  random.cpp  random.h  render.cpp  render.h  standard.h  strangeattractor.cpp  strangeattractor.h  test.cpp  var3.script  varblend.cpp  varblend.h
cpp/common/: assemble_toy.txt  datalogger.h  file.cpp  file.h  hosception.cpp  hosception.h  hoso.h  logger.cpp  logger.h  nameable.h  semaphore.cpp  semaphore.h  textlogger.cpp  textlogger.h  timerdefs.cpp  timerdefs.h
cpp/strangeattractor_scripts/: heighway_dragon.script  maple_leaf.script
cpp/varblend_scripts/: linear.script  sinusoidal.script  spherical.script  swirl.script  var0.script  var1.script  var2.script
src/: colorscheme.h  fastmath.cpp  fastmath.h  fitter.cpp  fitter.h  flame.cpp  pixel.cpp  pixel.h  point.h  render.cpp  render.h  strangor.h  varblend.h
src/scripts/: colorscheme.script  strangor.script  varblend.script
src/scripts/colorscheme/: bichrome.script  bispectrum.script  index.script  monochrome.script
tmp/common/: MemAllocator.cpp  MemAllocator.h  argparser.cpp  argparser.h  cmdline_args  exception.h  filereader.cpp  filereader.h  hjsonparser.cpp  hjsonparser.h  hoso.h  standard.h
ym/common/: verbogroup.h
ym/unittests/: CMakeLists.txt
(+192 files in other folders)
